Shopping cart num

--- a/public/views/elementTemplates/headernav.html
+++ b/public/views/elementTemplates/headernav.html
@@ -12,7 +12,7 @@
 			<div class="upper-nav-right">
 				<a href="/auth" class="upper-nav-text"> {{currentUser}}</a>
 				<a href="" class="upper-nav-text">Help</a>
-				<a ui-sref="checkout" class="upper-nav-text"><span class="glyphicon glyphicon-shopping-cart"></span></a>
+				<a ui-sref="checkout" class="upper-nav-text"><span class="glyphicon glyphicon-shopping-cart">{{numInCart}}</span></a>
 				<img src="./css/images/navbarpics/americanflag.png" alt="">
 			</div>
 
