--- a/public/views/productsviews/elements/LelementWomen.html
+++ b/public/views/productsviews/elements/LelementWomen.html
@@ -8,11 +8,11 @@
 <div class="shop-prods">
 	<h5>Shoes</h5>
 	<div class="shop-prods-categ">
-		<a ui-sref="wLifeStyle" class="prods">Lifestyle ({{WLSLength}})</a>
-		<a ui-sref="wRunning" class="prods">Running ({{RnLength}})</a>
-		<a ui-sref="wBasketball" class="prods">Basketball ({{BLength}})</a>
-		<a ui-sref="wSoccer" class="prods">Soccer ({{SLength}})</a>
-		<a ui-sref="wTraining" class="prods">Training & Gym ({{TGLength}})</a>
+		<a ui-sref="wLifeStyle" class="prods">Lifestyle</a>
+		<a ui-sref="wRunning" class="prods">Running</a>
+		<a ui-sref="wBasketball" class="prods">Basketball</a>
+		<a ui-sref="wSoccer" class="prods">Soccer</a>
+		<a ui-sref="wTraining" class="prods">Training & Gym</a>
 	</div>
 </div>
 
