--- a/public/views/elementTemplates/slider.html
+++ b/public/views/elementTemplates/slider.html
@@ -17,3 +17,10 @@
 		</div>
 	</div>
 </div>
+
+<script type="text/javascript">
+$(document).ready(function(){
+	$('.carousel').flickity();
+})
+
+</script>
