--- a/public/views/elementTemplates/footer.html
+++ b/public/views/elementTemplates/footer.html
@@ -24,10 +24,10 @@
 		<div class="col-4">
 			<a href="" class="col-top" id="social">Social</a>
 			<div class="col-4-1">
-				<a href=""><img src="css/images/footerpics/twitter.png" alt=""></a>
-				<a href=""><img src="css/images/footerpics/facebook.png" alt=""></a>
-				<a href=""><img src="css/images/footerpics/youtube.png" alt=""></a>
-				<a href=""><img src="css/images/footerpics/instagram.png" alt=""></a>
+				<a id="twitter-footer" class="footer-social-pics" href=""><img src="css/images/footerpics/twitter.png" alt=""></a>
+				<a class="footer-social-pics" href=""><img src="css/images/footerpics/facebook.png" alt=""></a>
+				<a class="footer-social-pics" href=""><img src="css/images/footerpics/youtube.png" alt=""></a>
+				<a class="footer-social-pics" href=""><img src="css/images/footerpics/instagram.png" alt=""></a>
 			</div>
 		</div>
 	</div>
