--- a/public/views/elementTemplates/kidsbenefits.html
+++ b/public/views/elementTemplates/kidsbenefits.html
@@ -12,9 +12,9 @@
 
 	<div class="get-the-best-of-nike-benefits">
 		<div class="nike-best-selection" ng-repeat="best in bestNike">
-			<a href=""><img ng-src="{{best.img}}" alt=""></a>
-			<a href=""><h5>{{best.title}}</h5></a>
-			<a href=""><p>{{best.desc}}</p></a>
+			<a style="text-decoration:none;" href=""><img ng-src="{{best.img}}" alt=""></a>
+			<a style="text-decoration:none;" href=""><h5>{{best.title}}</h5></a>
+			<a style="text-decoration:none;" href=""><p>{{best.desc}}</p></a>
 		</div>
 	</div>
 </section>
