--- a/public/views/mainviews/men.html
+++ b/public/views/mainviews/men.html
@@ -96,8 +96,8 @@
 	</section>
 	<section class="cp7-box">
 		<div class="cp7-desc">
-			<a ui-sref="mproduct"><h4>Cr7 chapter 4 mercurial superfly</h4></a>
-			<a ui-sref="mproduct">
+			<a style='text-decoration: none;' ui-sref="mproduct"><h4>Cr7 chapter 4 mercurial superfly</h4></a>
+			<a style='text-decoration: none;' ui-sref="mproduct">
 				<p>
 					He arrived in Manchester as cristiano ronaldo. forged in the fire of
 					battle, he emerged as cr7, one of the greates players in history.
