--- a/public/css/element/navbar.css
+++ b/public/css/element/navbar.css
@@ -22,7 +22,7 @@
 .upper-nav-left {
 	display: flex;
 	justify-content: flex-end;
-	width: 28%;
+	width: 22%;
 }
 
 .upper-nav-left a {
@@ -52,7 +52,7 @@
 
 /* Lower Nav */
 .menu-bar {
-	margin-top: 2.7%;
+	margin-top: 35px;
 	z-index: 99;
 	position: fixed;
 	display: flex;
@@ -75,13 +75,13 @@
 
 .categories {
 	text-align: center;
-	margin-top: 25px;
+	margin-top: 35px;
 	flex: 2;
 }
 
 .categories a {
 	text-transform: uppercase;
-	font-size: 14px;
+	font-size: 18px;
 	font-weight: bold;
 	font-family: "Fjalla One";
 	text-decoration: none;
@@ -120,4 +120,32 @@
 	flex: 1;
 	text-align: right;
 	padding-right: 20px;
+}
+
+@media screen and (max-width:1500px){
+	.menu-bar-upper {
+		width:1440px;
+	}
+
+	.menu-bar {
+		width: 1440px;
+	}
+
+	.upper-nav-left {
+		display: flex;
+		justify-content: flex-end;
+		width: 28%;
+	}
+
+	.categories a {
+		font-size: 15px;
+	}
+
+	.categories a:hover {
+		font-size: 28px;
+	}
+
+	.categories {
+		margin-top: 25px;
+	}
 }
