--- a/public/css/main/nikehome.css
+++ b/public/css/main/nikehome.css
@@ -21,13 +21,14 @@
 	text-transform: uppercase;
 	font-weight: 700;
 }
+
 .btn-summer {
 	position: absolute;
 	padding: 14px;
-	top: 54%;
+	top: 49%;
 	left: 5%;
 	color: black;
-	font-size: 12px;
+	font-size: 16px;
 	font-family: 'Fjalla One';
 	border: 2px solid white;
 	border-radius: 5px;
@@ -37,11 +38,12 @@
 }
 
 .banner-sum {
-	width: 25%;
+	/*width: 25%;*/
 	left: 5%;
 	position: absolute;
-	top: 28%;
+	top: 25%;
 	color: white;
+	font-size: 20px
 
 }
 
@@ -85,4 +87,42 @@
 
 .email-sign-up {
 	color: black;
+}
+
+
+@media screen and (max-width:1500px) {
+	.homepage {
+		width:1440px;
+	}
+
+	.home-vid {
+		width: 1440px;
+	}
+
+	.banner-sum {
+		/*width: 25%;*/
+		left: 5%;
+		position: absolute;
+		top: 25%;
+		color: white;
+		font-size: 15px
+
+	}
+
+	.btn-summer {
+		position: absolute;
+		padding: 14px;
+		top: 51%;
+		left: 5%;
+		color: black;
+		font-size: 12px;
+		font-family: 'Fjalla One';
+		border: 2px solid white;
+		border-radius: 5px;
+		text-transform: uppercase;
+		background: white;
+
+	}
+
+
 }
