--- a/public/css/main/nikemen.css
+++ b/public/css/main/nikemen.css
@@ -16,18 +16,25 @@
 }
 
 .nikemen-vid-cap {
+	text-align: right;
 	position: absolute;
 	z-index: 5;
-	bottom: 10%;
+	bottom: 15%;
 	right: 4%;
 	font-family: "Fjalla One";
 	color: #fff;
+
 }
 
 .nikemen-vid-cap h1{
-	font-size: 49px;
+	padding: 0;
+	font-size: 53px;
 	text-transform: uppercase;
 	color: white;
+}
+
+.nikemen-vid-cap p{
+	font-size: 20px;
 }
 
 #para-men {
@@ -37,11 +44,11 @@
 .nikemen-btn {
 	position: absolute;
 	right: 5%;
-	bottom:0%;
+	bottom:7%;
 	position: absolute;
 	padding: 14px;
 	color: black;
-	font-size: 12px;
+	font-size: 16px;
 	font-family: 'Fjalla One';
 	border: 2px solid #ccc;
 	border-radius: 5px;
@@ -78,16 +85,20 @@
 }
 
 .nike-men-text .nike-men-p {
-	font-size: 13px;
+	font-size: 20px;
 	font-family: 'Fjalla One';
 
 }
 
+.nike-men-text a{
+	font-size: 30px;
+}
+
 .nike-men-shoes {
 	position: absolute;
-	left:15%;
+	left: 20%;
 	height: 90vh;
-	width: 80%;
+	width: 70%;
 	display: flex;
 	justify-content: center;
 	flex-direction: row;
@@ -95,13 +106,13 @@
 }
 
 .nike-men-shoes img{
-	padding: 30px;
-	height: 200px;
+	padding: 40px;
+	height: 230px;
 	width: 100%;
 }
 
 .nike-men-shoes h3{
-	font-size: 15px;
+	font-size: 20px;
 	font-family: 'Fjalla One';
 	text-transform: uppercase;
 	font-weight: 400;
@@ -118,6 +129,10 @@
 .shop-now-men{
 	position: relative;
 	margin-top: 116px;
+}
+
+.shopper-anim-pic {
+	width: 100%;
 }
 /*--Need To Hide Button then show--*/
 
@@ -142,6 +157,7 @@
 	height: 20%;
 	width: 100%;
 	padding-top: 2%;
+	padding-bottom: 20px;
 }
 
 .free-rn a {
@@ -149,6 +165,7 @@
 }
 
 .free-rn h3 {
+	font-size: 40px;
 	text-transform: uppercase;
 	font-family: 'Fjalla One';
 }
@@ -164,6 +181,11 @@
 	width: 100%;
 	display: flex;
 	justify-content: center;
+}
+
+.men-double-image img{
+	width: 100%;
+	height: 67vh;
 }
 
 .cool-comfort {
@@ -187,12 +209,12 @@
 }
 
 .cool-left-left h3, .cool-right-right h3{
-	font-size: 18px;
+	font-size: 26px;
 	color: #252525;
 }
 
 .cool-left-left span, .cool-right-right span {
-	font-size: 12px;
+	font-size: 16px;
 	color: #252525;
 }
 
@@ -211,6 +233,10 @@
 	width: 100%;
 }
 
+.cp7 img {
+	width:100%;
+}
+
 .cp7-box {
 	display: flex;
 	justify-content: center;
@@ -227,13 +253,15 @@
 .cp7-desc a h4 {
 	color: #252525;
 	font-family: 'Fjalla One';
-	font-size: 22px;
+	font-size: 35px;
 	text-transform: uppercase;
+	text-align: center;
+	text-decoration: none;
 }
 .cp7-desc a p {
 	color: #252525;
 	font-family: 'Fjalla One';
-	font-size: 13px;
+	font-size: 18px;
 	text-align: center;
 	text-transform: capitalize;
 }
@@ -254,6 +282,14 @@
 	text-align: center;
 }
 
+.intro-nike-plus h1{
+	font-size: 40px
+}
+
+.intro-nike-plus p{
+	font-size: 20px;
+}
+
 .intro-nike-desc {
 	width: 100%;
 }
@@ -271,14 +307,19 @@
 	border: 8px solid #f0f0f0;
 }
 
+.plus-apps {
+	width: 310px;
+	height: 119px;
+}
+
 .nike-plus-apps h5{
-	font-size: 18px;
+	font-size: 22px;
 	text-align: center;
 	text-transform: uppercase;
 }
 
 .nike-plus-apps p {
-	font-size: 13px;
+	font-size: 15px;
 	text-align: center;
 	font-family: 'Lato', sans-serif;
 	text-transform: capitalize;
@@ -294,7 +335,7 @@
 }
 
 .social-title h5 {
-	font-size: 20px;
+	font-size: 30px;
 }
 
 .social-med{
@@ -306,6 +347,167 @@
 .social-med a img {
 	padding-left: 10px;
 	padding-right: 10px;
+	height: 57px;
+	width: 60px
 }
 /* Social Network Follow */
 /* Nike Plus App */
+
+@media screen and (max-width:1500px){
+	.nikemen-video {
+		width: 1500px;
+	}
+
+	.nikemen-vid-cap {
+		position: absolute;
+		z-index: 5;
+		bottom: 10%;
+		right: 4%;
+		font-family: "Fjalla One";
+		color: #fff;
+	}
+
+	.nikemen-vid-cap h1 {
+		font-size: 49px;
+		text-transform: uppercase;
+		color: white;
+	}
+
+	.nikemen-btn {
+		bottom: 2%;
+		font-size: 12px;
+	}
+
+	.nikemen-vid-cap p{
+		font-size: normal;
+		padding: 0;
+		margin: 0;
+	}
+
+	.nike-men-shoes {
+		width: 1200px;
+		height: 800px;
+		left: 15%;
+	}
+
+	.nike-men-shoes img{
+		padding: 30px;
+		height: 200px;
+		width: 100%;
+	}
+
+	.shopper-anim-pic {
+		width: 1440px;
+	}
+
+	.men-double-image {
+		width: 1440px;
+		display: flex;
+		justify-content: center;
+	}
+
+	.nike-men-text a{
+		font-size: 20px;
+	}
+
+	.men-double-image img{
+		width: 1440px;
+	}
+
+	.free-rn {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		height: 20%;
+		width: 1440px;
+		padding-top: 2%;
+	}
+
+	.cool-left-left h3, .cool-right-right h3{
+		font-size: 18px;
+		color: #252525;
+	}
+
+	.cool-left-left span, .cool-right-right span {
+		font-size: 12px;
+		color: #252525;
+	}
+
+	.nike-men-text {
+		position: absolute;
+		width: 223px;
+		left: 3%;
+		top: 18%;
+	}
+
+	.nike-men-text .nike-men-title{
+		font-size: 35px;
+		font-weight: 400;
+		text-transform: uppercase;
+		font-family: 'Fjalla One';
+	}
+
+	.nike-men-text .nike-men-p {
+		font-size: 13px;
+		font-family: 'Fjalla One';
+
+	}
+
+	.nike-men-shoes h3{
+		font-size: 15px;
+	}
+
+	.cp7 {
+		width: 1440px;
+	}
+
+	.cp7-desc {
+		width: 500px;
+	}
+
+	.plus-apps {
+		width: 100%;
+		height: 95px;
+	}
+
+	.intro-nike-plus h1 {
+		font-size: 30px
+	}
+
+	.intro-nike-plus p {
+		font-size: 20px;
+	}
+
+	.intro-nike-desc {
+		width: 1440px;
+	}
+
+	.nike-plus-apps h5{
+		font-size: 18px;
+	}
+
+	.nike-plus-apps p {
+		font-size: 13px;
+
+	}
+
+	.social-title h5 {
+		font-size: 20px;
+	}
+
+	.ind-med a img{
+		width: 100%;
+
+	}
+
+	.cp7-desc a h4 {
+		font-size: 22px;
+
+	}
+
+	.cp7-desc a p {
+		font-size: 13px;
+	}
+
+
+}
