--- a/public/views/mainviews/men.html
+++ b/public/views/mainviews/men.html
@@ -66,7 +66,7 @@
 
 
 <!-- Targeted Cooling and Comfort Nike Flyknit -->
-	<section>
+	<section class="target-cooling-comfort">
 		<div class="men-double-image">
 			<img ui-sref="mproduct" src="css/images/nikempng/golferbros.png" alt="">
 			<img ui-sref="mproduct" src="css/images/nikempng/fnshoe.png" alt="">
