--- a/public/views/productsviews/elements/LelementAdult.html
+++ b/public/views/productsviews/elements/LelementAdult.html
@@ -4,6 +4,7 @@
 
 
 <!-- Shoe Shopping -->
+<div class="categ-container">
 <div class="shop-prods">
 	<h5>Shoes</h5>
 	<div class="shop-prods-categ">
@@ -41,4 +42,5 @@
 		<a href="#" class="shop-categ-coll"><h5 class="prods">Color?</h5> <span class="prods">+</span></a>
 		<a href="#" class="shop-categ-coll"><h5 class="prods">Size</h5> <span class="prods">+</span></a>
 	</div>
+</div>
 </div>
