--- a/public/views/productsviews/menshoes.html
+++ b/public/views/productsviews/menshoes.html
@@ -35,12 +35,14 @@
 		<h1>All Shoes</h1>
 		</div>
 		<!-- The Real Deal Stuff -->
-		<div class="the-real-products">
-			<div ng-repeat= "shoes in NikeMAShoes">
-				<img ng-src="{{shoes.img}}" alt="" ui-sref="mshoe({id:shoes.product_id})">
-				<h5 style="margin:0; padding:0;">{{shoes.name}}</h5>
-				<h6 style="margin:0; padding:0">Men's Running Shoe</h6>
-				<p style="margin:0; padding:0">{{shoes.price | currency}}</p>
+		<div class="products-container">
+			<div class="the-real-products">
+				<div ng-repeat= "shoes in NikeMAShoes">
+					<img ng-src="{{shoes.img}}" alt="" ui-sref="mshoe({id:shoes.product_id})">
+					<h5 style="margin:0; padding:0;">{{shoes.name}}</h5>
+					<h6 style="margin:0; padding:0">Men's Running Shoe</h6>
+					<p style="margin:0; padding:0">{{shoes.price | currency}}</p>
+				</div>
 			</div>
 		</div>
 	</section>
