--- a/public/views/productsviews/productinfoview/bproductinfo.html
+++ b/public/views/productsviews/productinfoview/bproductinfo.html
@@ -2,7 +2,7 @@
 
 
 	<div class="productview-mini-pics">
-		<img width='63px' ng-src="{{singleItem[0].img}}" alt="">
+		<img ng-src="{{singleItem[0].img}}" alt="">
 	</div>
 
 	<div class="productview-main-pic">
@@ -33,8 +33,8 @@
 		</div>
 
 <!-- Mini Image -->
-		<div>
-			<img width='60px' height='64px' style="border:2px solid #ccc" ng-src="{{singleItem[0].img}}" alt="">
+		<div class="mini-image-shoe">
+			<img ng-src="{{singleItem[0].img}}" alt="">
 		</div>
 
 <!-- Buttons Size/AddCart -->
