--- a/public/css/main/nikecustomize.css
+++ b/public/css/main/nikecustomize.css
@@ -105,7 +105,7 @@
 }
 
 .dmd h1{
-	font-size: 28px;
+	font-size: 38px;
 	font-family: "Fjalla One";
 	text-transform: uppercase;
 	color: #000;
@@ -113,7 +113,7 @@
 
 .dmd h4{
 	font-family: "Lato";
-	font-size: 15px;
+	font-size: 20px;
 	color: #6f6f6f;
 }
 
@@ -134,7 +134,7 @@
 
 .customize-started h1 {
 	font-family: "Fjalla One";
-	font-size: 28px;
+	font-size: 38px;
 	color: #000;
 	text-transform: uppercase;
 }
@@ -142,6 +142,7 @@
 .customize-started p {
 	padding: 0;
 	margin: 0;
+	font-size: 20px;
 	color: #6f6f6f;
 }
 
@@ -159,7 +160,7 @@
 }
 
 .customize-blank-shoe {
-	width: 90%;
+	width: 80%;
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
@@ -187,12 +188,16 @@
 
 /* Material Color Innovation */
 .mci-sect {
+	width: 100%;
 	display: flex;
+	justify-content: center;
 	background: #ffffff;
+
 }
 
 .mci-ind {
-	flex: 1;
+	width: 33.5vw;
+	flex:1;
 }
 
 
@@ -208,10 +213,14 @@
 
 .customize-feat-title {
 	font-family: "Fjalla One";
-	font-size: 27px;
+	font-size: 37px;
 	color: #000;
 	text-transform: uppercase;
 	margin-bottom: 7%;
+}
+
+.customize-feat-title h2{
+	font-size: 37px;
 }
 
 .customize-feat-img {
@@ -230,12 +239,13 @@
 }
 
 .customize-feat-extra h3 {
-	font-size: 30px;
+	font-size: 45px;
 	font-family: "Fjalla One";
 	color: #000;
 }
 
 .customize-feat-extra p {
+	font-size: 18px;
 	color: #696969;
 }
 
@@ -256,21 +266,27 @@
 	position: relative;
 }
 
+.flyknit-banner img{
+	width: 100%;
+}
+
 .flyknit-header {
 	position: absolute;
 	display: flex;
 	flex-direction: column;
 	color: white;
-	top:8%;
+	top: 20%;
 	left: 4%;
 
 }
 
 .flyknit-header h1 {
 	font-family: "Fjalla One";
+	font-size: 50px;
 }
 
 .flyknit-header p {
+	font-size: 22px;
 	padding: 0;
 	margin: 0;
 	font-family: "Lato";
@@ -284,7 +300,7 @@
 	background: #ffffff;
 	display: flex;
 	position: absolute;
-	top: 30%;
+	top: 45%;
 	left: 8%;
 }
 
@@ -296,6 +312,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	width: 100%;
 }
 .summer-suede-shoes {
 	padding-top: 5%;
@@ -311,6 +328,7 @@
 	color: #000;
 	text-transform: uppercase;
 	font-family: "Fjalla One";
+	font-size: 35px;
 }
 
 .summer-suede-sect p {
@@ -318,6 +336,7 @@
 	margin: 0;
 	font-family: "Lato";
 	color: #676767;
+	font-size: 18px;
 }
 
 .summer-suede-sect a {
@@ -332,7 +351,7 @@
 }
 
 
-@media screen and (max-width:1500px) {
+@media screen and (max-width:1700px) {
 	.customize-nav {
 		width: 1440px
 	}
@@ -365,5 +384,122 @@
 		font-size: 15px;
 
 	}
+
+	.design-make-deliver {
+		width: 1440px;
+	}
+
+	.dmd h1{
+		font-size: 28px;
+	}
+
+	.dmd h4{
+		font-size: 15px;
+	}
+
+	.customize-started {
+		width: 1440px;
+	}
+
+	.customize-started h1 {
+		font-family: "Fjalla One";
+		font-size: 28px;
+		color: #000;
+		text-transform: uppercase;
+	}
+
+	.customize-started p {
+		padding: 0;
+		margin: 0;
+		color: #6f6f6f;
+	}
+
+	.customize-blank {
+		width: 1440px;
+	}
+
+	.customize-blank img {
+		padding: 20px;
+		width: 100%;
+	}
+
+	.customize-blank-shoe {
+		width: 1440px;
+	}
+
+	.mci-sect {
+		width: 1440px;
+
+	}
+
+	.mci-ind {
+		width: 500px;
+	}
+
+	.customize-feat-title {
+		font-size: 27px;
+	}
+
+	.customize-feat-sect {
+		width: 1440px;
+	}
+
+	.customize-feat-extra h3 {
+		font-size: 35px;
+		font-family: "Fjalla One";
+		color: #000;
+	}
+
+	.customize-feat-extra p {
+		font-size: 13px;
+		color: #696969;
+	}
+
+	.flyknit-sect {
+		width: 1440px;
+	}
+
+	.flyknit-header {
+		top: 15%;
+		left: 4%;
+	}
+
+	.flyknit-btn {
+		text-align: center;
+		padding: 5px;
+		padding-right: 20px;
+		border-radius: 5px;
+		background: #ffffff;
+		display: flex;
+		position: absolute;
+		top: 40%;
+		left: 8%;
+	}
+
+	.flyknit-header h1 {
+		font-size: 30px;
+	}
+	.flyknit-header p {
+		font-size: 15px;
+	}
+
+	.summer-suede-sect {
+		width: 1440px;
+	}
+
+	.summer-suede-shoes img{
+		width: 300px;
+	}
+
+
+	.summer-suede-sect h1{
+		font-size: 25px;
+	}
+
+	.summer-suede-sect p {
+		font-size: 13px;
+	}
+
+
 
 }
