--- a/public/views/productsviews/success.html
+++ b/public/views/productsviews/success.html
@@ -6,7 +6,7 @@
 
 		<p>Soon you can look forward to your package. We will send an email when your order is on the way.</p>
 
-		<p>You will find more information about your order at My H&M.</p>
+		<p>You will find more information about your order at Nike.</p>
 
 		<p>You are always welcome to get in touch with us at 1‑855‑466‑7467.</p>
 
